# warranty_manager

./: .gitignore  pyproject.toml
docs/: class.puml
tests/: test_accountant.py  test_scheduler.py  test_warranty.py
warranty_man/: accountant.py  scheduler.py  warranty.py
