[tool.poetry]
name = "warranty-man"
version = "0.1.0"
description = ""
authors = ["ya01in <yaolin45040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
