[tool.poetry]
name = "warranty-man"
version = "0.1.0"
description = ""
authors = ["ya01in <yaolin45040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.3"
bandit = "^1.7.8"
safety = "^3.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
